[gd_scene load_steps=14 format=2]

[ext_resource path="res://Background Images/gym3.png" type="Texture" id=1]
[ext_resource path="res://Fonts/vegan-style-font/VeganStylePersonalUse-5Y58.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Background Images/food6.png" type="Texture" id=3]
[ext_resource path="res://Background Images/study5.png" type="Texture" id=4]
[ext_resource path="res://Main/EmptyButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main/Main.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 130
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
margin_right = 1088.0
margin_bottom = 1930.0
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )

[node name="Title" type="Label" parent="CanvasLayer"]
margin_top = 102.0
margin_right = 1088.0
margin_bottom = 420.0
custom_colors/font_color = Color( 0.847059, 0.588235, 0.831373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Adventurous"
align = 1
valign = 1

[node name="FoodTab" type="Sprite" parent="CanvasLayer"]
position = Vector2( 540, 1150 )
scale = Vector2( 1.38611, 1.37458 )
texture = ExtResource( 3 )

[node name="ActiveTab" type="Sprite" parent="CanvasLayer"]
position = Vector2( 540, 665 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="StudyTab" type="Sprite" parent="CanvasLayer"]
position = Vector2( 540, 1635 )
scale = Vector2( 1.06923, 1.26748 )
texture = ExtResource( 4 )

[node name="ActiveButton" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_left = 226.0
margin_top = 459.0
margin_right = 859.0
margin_bottom = 873.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )

[node name="FoodButton" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_left = 226.0
margin_top = 942.0
margin_right = 859.0
margin_bottom = 1356.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )

[node name="StudyButton" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_left = 226.0
margin_top = 1431.0
margin_right = 859.0
margin_bottom = 1845.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )

[connection signal="pressed" from="CanvasLayer/ActiveButton" to="." method="_on_ActiveButton_pressed"]
[connection signal="pressed" from="CanvasLayer/FoodButton" to="." method="_on_FoodButton_pressed"]
[connection signal="pressed" from="CanvasLayer/StudyButton" to="." method="_on_StudyButton_pressed"]
